# NeuralNetFromScratch

./: CMakeLists.txt  README.md
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
include/utils/: MatrixToVector.hpp  MultiplyMatrix.hpp
src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp  neuralnetwork
src/utils/: MatrixToVector.cpp  MultiplyMatrix.cpp
